using System.Text.Json;
using System.ComponentModel.DataAnnotations.Schema;
using Api.Models;

namespace Api.Infrastructure.Entities;

public class PdfDocumentEntity
{
    // DDD-PHASE2: Converted to Guid for domain alignment
    public Guid Id { get; set; } = Guid.NewGuid();
    // DDD-PHASE2: Converted to Guid for domain alignment
    public Guid GameId { get; set; }
    public string FileName { get; set; } = default!;
    public string FilePath { get; set; } = default!;
    public long FileSizeBytes { get; set; }
    public string ContentType { get; set; } = "application/pdf";
    // DDD-PHASE2: Converted to Guid for domain alignment
    public Guid UploadedByUserId { get; set; }
    public DateTime UploadedAt { get; set; } = DateTime.UtcNow;
    public string? Metadata { get; set; } // JSON metadata

    // PDF-02: Text extraction fields
    public string? ExtractedText { get; set; }

    // Issue #4215: Granular 7-state tracking
    public string ProcessingState { get; set; } = "Pending"; // Enum stored as string: Pending, Uploading, Extracting, Chunking, Embedding, Indexing, Ready, Failed

    // Deprecated: Keep for backward compatibility (migrate in Issue #4216)
    public string ProcessingStatus { get; set; } = "pending"; // pending, processing, completed, failed

    public DateTime? ProcessedAt { get; set; }
    public int? PageCount { get; set; }
    public int? CharacterCount { get; set; }
    public string? ProcessingError { get; set; }

    // Issue #4216: Retry mechanism tracking
    public int RetryCount { get; set; }
    public string? ErrorCategory { get; set; } // ErrorCategory enum: Network, Parsing, Quota, Service, Unknown
    public string? FailedAtState { get; set; } // PdfProcessingState where failure occurred

    // PDF-03: Structured data extraction fields
    public string? ExtractedTables { get; set; } // JSON array of tables
    public string? ExtractedDiagrams { get; set; } // JSON array of diagram metadata
    public string? AtomicRules { get; set; } // JSON array of atomic rules from tables
    public int? TableCount { get; set; }
    public int? DiagramCount { get; set; }
    public int? AtomicRuleCount { get; set; }

    // PDF-08: Progress tracking
    public string? ProcessingProgressJson { get; set; }

    // AI-09: Multi-language support
    public string Language { get; set; } = "en"; // ISO 639-1 code: en, it, de, fr, es

    // AI-14: Hybrid search - PostgreSQL full-text search vector (automatically maintained by trigger)
    // This column is populated by the tsvector_update_pdf_documents trigger
    [Column("search_vector")]
    public string? SearchVector { get; set; }

    // Issue #2051: Multi-document collection support
    public Guid? CollectionId { get; set; }
    public string DocumentType { get; set; } = "base"; // base, expansion, errata, homerule
    public int SortOrder { get; set; }

    // Admin Wizard: Public library visibility (visible to all registered users)
    public bool IsPublic { get; set; }

    // Issue #2732: Shared game document support
    public Guid? SharedGameId { get; set; }
    public Guid? ContributorId { get; set; }
    public Guid? SourceDocumentId { get; set; }

    // Issue #3664: Private game PDF support
    public Guid? PrivateGameId { get; set; }

    // Issue #4219: Per-state timing tracking for metrics and ETA
    public DateTime? UploadingStartedAt { get; set; }
    public DateTime? ExtractingStartedAt { get; set; }
    public DateTime? ChunkingStartedAt { get; set; }
    public DateTime? EmbeddingStartedAt { get; set; }
    public DateTime? IndexingStartedAt { get; set; }

    [NotMapped]
    public ProcessingProgress? ProcessingProgress
    {
        get => ProcessingProgressJson == null
            ? null
            : JsonSerializer.Deserialize<ProcessingProgress>(ProcessingProgressJson);
        set => ProcessingProgressJson = value == null
            ? null
            : JsonSerializer.Serialize(value);
    }

    public GameEntity Game { get; set; } = default!;
    public UserEntity UploadedBy { get; set; } = default!;

    // Issue #2051: Navigation to collection
    public DocumentCollectionEntity? Collection { get; set; }
}
