erDiagram
    PdfDocument ||--o{ ExtractionAttempt : "has attempts"
    DocumentCollection ||--o{ DocumentCollectionContent : "contains"
    DocumentCollectionContent }o--|| PdfDocument : "references"
    User ||--o{ PdfDocument : "uploads"
    User ||--o{ DocumentCollection : "creates"
    Game ||--o{ PdfDocument : "has pdfs"
    Game ||--o{ DocumentCollection : "has collections"
    ChunkedUploadSession }o--|| User : "belongs to"

    PdfDocument {
        Guid Id PK
        Guid GameId FK
        Guid UploadedByUserId FK
        string FileName
        long FileSizeBytes
        ProcessingStatus Status
        string ExtractedText
        int PageCount
        int CharacterCount
        double QualityScore
        bool IsPublic
        bool IsDeleted
        DateTime UploadedAt
        DateTime ProcessedAt
        string ProcessingError
        string ProcessingProgressJson
    }

    ExtractionAttempt {
        Guid Id PK
        Guid PdfDocumentId FK
        ExtractionStage Stage
        double QualityScore
        bool Succeeded
        DateTime AttemptedAt
        int DurationMs
        string ErrorMessage
    }

    DocumentCollection {
        Guid Id PK
        Guid GameId FK
        Guid UserId FK
        string Name
        string Description
        DateTime CreatedAt
    }

    DocumentCollectionContent {
        Guid Id PK
        Guid CollectionId FK
        Guid PdfDocumentId FK
        string DocumentType
        int SortOrder
    }

    ChunkedUploadSession {
        Guid SessionId PK
        Guid UserId FK
        Guid GameId FK
        string FileName
        long TotalFileSize
        int TotalChunks
        int ChunkSizeBytes
        string ReceivedChunksJson
        DateTime CreatedAt
        DateTime ExpiresAt
        bool IsComplete
    }

    User {
        Guid Id PK
        string Email
        string DisplayName
    }

    Game {
        Guid Id PK
        string Title
    }
